simplelog.txt
Starting a Gradle Daemon, 2 incompatible Daemons could not be reused, use --status for details

> Configure project :
Fabric Loom: 0.8.17

> Task :compileJava
warning: Supported source version 'RELEASE_8' from annotation processor 'org.gradle.api.internal.tasks.compile.processing.TimeTrackingProcessor' less than -source '16'
warning: Supported source version 'RELEASE_8' from annotation processor 'org.gradle.api.internal.tasks.compile.processing.TimeTrackingProcessor' less than -source '16'
/Users/zhanghaocheng/fabric-example-mod/src/main/java/com/code2828/mods/CheMC.java:109: error: constructor RangeDecoratorConfig in class RangeDecoratorConfig cannot be applied to given types;
            .decorate(Decorator.RANGE.configure(new RangeDecoratorConfig(0,2,128))).spreadHorizontally().repeat(60); // number of veins per chunk
                                                ^
  required: HeightProvider
  found:    int,int,int
  reason: actual and formal argument lists differ in length
/Users/zhanghaocheng/fabric-example-mod/src/main/java/com/code2828/mods/CheMC.java:113: error: cannot find symbol
        RegistryKey<ConfiguredFeature<?, ?>> oreLiClO = RegistryKey.of(Registry.CONFIGURED_FEATURE_WORLDGEN,
                                                                               ^
  symbol:   variable CONFIGURED_FEATURE_WORLDGEN
  location: class Registry
Note: /Users/zhanghaocheng/fabric-example-mod/src/main/java/com/code2828/mods/CheMC.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: /Users/zhanghaocheng/fabric-example-mod/src/main/java/com/code2828/mods/CheMC.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
2 warnings

> Task :compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 46s
1 actionable task: 1 executed
